<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes,MissingTranslation">
    <string name="app_name">mahose</string>
    <string name="tv_copyright">Copyright © 2021-2091 YuanHai.</string>
    <string name="loading_the_new_version">Loading the New Version</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="permission_application">Permission application</string>
    <string name="if_you_want_to_use_app">If you want to use the function of the app, please agree to the permission application first</string>
    <string name="version_will_be_done">Version download will be done\nApp will restart and re-install</string>
    <string name="current_upgrade_error">Current upgrade error\nplease restart app</string>
    <string name="it_is_detected_new_version">It is detected that the latest version of the app has been released. For your better experience, please click download</string>
    <string name="new_version">New Version</string>
    <string name="video">Video</string>
    <string name="gallary">Gallary</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="people_like">%s people like</string>
    <string name="thumb_loading">Thumb is loading</string>
    <string name="who_will_like">who will like</string>
    <string name="unknown_error">Unknow Error</string>
    <string name="try_again">Try again</string>
    <string name="it_seem_that_problem">It seem that had problem\nPlease try again</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="login">Login</string>
    <string name="mahose_id">MaHose ID</string>
    <string name="find_custom_service">Find customer service</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="default_theme">Default Theme</string>
    <string name="the_topic_is_switching">The topic is switching. Please do not operate the app\nIt will restart automatically after theme switching</string>
    <string name="go">Go!</string>
    <string name="id_name_title">ID/Name/Title</string>
    <string name="was_search">Was Search</string>
    <string name="please_input_what_you_want">Please input what you want to search</string>
    <string name="privacy">Privacy</string>
    <string name="please_login_first">Please Login or Register first!</string>
    <string name="to_login">To Login</string>
    <string name="to_logout">To Logout</string>
    <string name="to_registe">To Register</string>
    <string name="logout">Logout</string>
    <string name="i_want_to">I want to</string>
    <string name="do_u_want_to_logout">Do u want to logout?</string>
    <string name="no_thanks">No,thanks</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_is_empty">Username is Empty</string>
    <string name="password_is_empty">password is Empty</string>
    <string name="logout_success">logout success</string>
    <string name="logout_failed">Logout Failed\nPlease try again</string>
    <string name="registe">Register</string>
    <string name="hello">Hello!</string>
    <string name="welcome_to_planet">Welcome to planet of Mahose nylon app. feel it like home</string>
    <string name="created_account">Create account</string>
    <string name="your_email">Your email</string>
    <string name="nick_name">Nick name</string>
    <string name="type_password">Type password</string>
    <string name="retype_password">Re-type password</string>
    <string name="already_have_an_account">Aleady have an account?</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="re_password_is_empty">Re-password is empty</string>
    <string name="register_success">Registe success</string>
    <string name="register_failed">Registe Failed\nPlease try again</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>
    <string name="get">Get</string>
    <string name="verify_code_is_empty">Verify code is empty</string>
    <string name="get_verify_success">Get verify code success, please check your mailbox</string>
    <string name="get_verify_failed">Get verify code failed, please try again after 5 min</string>
    <string name="twice_password_is_not_same">twice password is not same</string>
    <string name="email">Email</string>
    <string name="verify_code">verify code</string>
    <string name="new_password">new password</string>
    <string name="input_8_16_password">input 8-16 digital password</string>
    <string name="confirm">Confirm</string>
    <string name="modify_password_success">Modify password successful</string>
    <string name="modify_password_failed">Modify password failed\nPlease check your network\nOr try again</string>
    <string name="network_is_loading">Network is loading.Please wait a minute</string>
    <string name="service_center">Service Center</string>
    <string name="order">Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="you_haven_add_any">You haven\'t added any items to the shopping cart yet</string>
    <string name="pay_success">Pay success!</string>
    <string name="pay_failed">Pay Failed!\nPlease try again</string>
    <string name="like">Like</string>
    <string name="do_not_click_fast">Do not click so fast!</string>
</resources>
