<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    tools:ignore="ContentDescription,Autofill,LabelFor,HardcodedText,RelativeOverlap">

    <!-- 注册 -->
    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:text="@string/registe"
        android:textColor="@color/white_color" />

    <!-- 头像 -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_login_head"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/test_head" />

    <!-- mahose -->
    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/app_name"
        android:textColor="@color/white_color"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <!-- 线1 -->
    <View
        android:id="@+id/v_login_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_gray_color" />

    <!-- 用户名 -->
    <com.hiber.tools.layout.PercentLinearLayout
        android:id="@+id/rl_login_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/v_login_line1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:src="@drawable/user_login" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="18"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white_color"
            android:textColorHint="@color/dark_gray_color"
            android:textSize="18sp" />

    </com.hiber.tools.layout.PercentLinearLayout>

    <!-- 线2 -->
    <View
        android:id="@+id/v_login_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_login_username"
        android:layout_centerInParent="true"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_gray_color" />

    <!-- 用户密码 -->
    <com.hiber.tools.layout.PercentLinearLayout
        android:id="@+id/rl_login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/v_login_line2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:src="@drawable/lock_login" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white_color"
            android:textColorHint="@color/dark_gray_color"
            android:textSize="18sp" />

    </com.hiber.tools.layout.PercentLinearLayout>

    <!-- 线3 -->
    <View
        android:id="@+id/v_login_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_login_password"
        android:layout_centerInParent="true"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40dp"
        android:background="@color/dark_gray_color" />

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/v_login_line3"
        android:layout_marginStart="40sp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bt_login_selector"
        android:text="@string/login"
        android:textColor="@color/white_color" />

    <!-- 等待圈 -->
    <com.mahose.mahose.widget.LoadWidget
        android:id="@+id/wd_login_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <!-- 出错 -->
    <com.mahose.mahose.widget.ErrorWidget
        android:id="@+id/wd_login_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <!-- 忘记密码 -->
    <TextView
        android:id="@+id/tv_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="Forgot password"
        android:textColor="@color/dark_gray_color"
        android:textSize="16sp" />

</com.hiber.tools.layout.PercentRelativeLayout>
